--- a/docs/_static/css/packets.css
+++ b/docs/_static/css/packets.css
@@ -14,9 +14,9 @@ table.docutils tr, table.docutils td {
 	margin-bottom: 24px;
 }
 
-.line-block .line-block {
+.rst-content .line-block .line-block, .rst-content .field-body .line-block {
 	padding: 4px;
-	margin-bottom: 3px;
+	margin-bottom: 8px;
 }
 
 .file > em:before {
