--- a/docs/_static/css/packets.css
+++ b/docs/_static/css/packets.css
@@ -14,6 +14,10 @@ table.kaitai th, table.kaitai td {
 	padding: 0 8px 2px 0 !important;
 }
 
+li div.kaitai-field {
+	margin-bottom: 0 !important;
+}
+
 .line-block {
 	margin-bottom: 24px;
 }
